# divi-add-nodes

./: Cargo.toml  README.md  add-nodes.sh
.github/workflows/: release.yml
src/: main.rs
